err/pybuilder.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/appdirs-1.4.3.dist-info'...
Listing './lib/python3.5/site-packages/packaging'...
Listing './lib/python3.5/site-packages/packaging-16.8.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pybuilder'...
Compiling './lib/python3.5/site-packages/pybuilder/excp_util_2.py'...
***   File "./lib/python3.5/site-packages/pybuilder/excp_util_2.py", line 27
    raise ex, None, tb
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pybuilder/pluginhelper'...
Listing './lib/python3.5/site-packages/pybuilder/plugins'...
Listing './lib/python3.5/site-packages/pybuilder/plugins/python'...
Listing './lib/python3.5/site-packages/pybuilder-0.11.12-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools-35.0.2.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tblib'...
Listing './lib/python3.5/site-packages/tblib-1.3.2.dist-info'...
Listing './lib/python3.5/site-packages/wheel'...
Listing './lib/python3.5/site-packages/wheel/signatures'...
Listing './lib/python3.5/site-packages/wheel/tool'...
Listing './lib/python3.5/site-packages/wheel-0.30.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
